base/infrastructure/redis/ingress/ingress-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-tcp
  namespace: infrastructure
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`redis.vpn.patinanetwork.org`)
      services:
        - name: redis
          port: 6379
  tls:
    secretName: redis-vpn-tls
